<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_8">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/txt_comment_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_comment_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/username"
        android:textColor="@color/comment_orange"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_comment_date"
        app:layout_constraintStart_toEndOf="@id/iv_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_comment_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="2024-06-01"
        android:textColor="@color/gray_888_short"
        android:textSize="8sp"
        app:layout_constraintBaseline_toBottomOf="@string/user"
        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
        app:layout_constraintStart_toEndOf="@id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@+id/txt_comment_user" />

    <TextView
        android:id="@+id/txt_comment_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:text="@string/comment_content"
        android:textColor="@color/gray_222_short"
        android:textSize="@dimen/text_size_10sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txt_comment_user"
        app:layout_constraintTop_toBottomOf="@id/txt_comment_date" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:constraint_referenced_ids="txt_comment_user,txt_comment_date"
        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_avatar" />


</androidx.constraintlayout.widget.ConstraintLayout>